refactor(scripts): reorganizar estructura de archivos y componentes javascript
- Movida la lógica a pages/Login.js
- Reorganizados componentes UI en la carpeta components/código separando responsabilidades

--- a/index.html
+++ b/index.html
@@ -184,6 +184,6 @@
       </footer>
     </div>
 
-    <script type="module" src="/src/scripts/main.js"></script>
+    <script type="module" src="./src/scripts/ui/pages/Login.js"></script>
   </body>
 </html>
