--- a/two-factor-authentication.html
+++ b/two-factor-authentication.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
+	<link rel="icon" type="image/svg+xml" href="/vite.svg">
 	<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700;900&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 	<link rel="stylesheet" href="styles/pages/2fa/2fa.css">
@@ -76,6 +77,6 @@
 		</div>
 	</div>
 
-  <!-- <script type="module" src="scripts/ui/pages/2fa.js"></script> -->
+  <script type="module" src="/src/scripts/ui/pages/2fa.js"></script>
 </body>
 </html>
