--- a/two-factor-authentication.html
+++ b/two-factor-authentication.html
@@ -7,7 +7,7 @@
 	<link rel="icon" type="image/svg+xml" href="/vite.svg">
 	<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700;900&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-	<link rel="stylesheet" href="styles/pages/2fa/2fa.css">
+	<link rel="stylesheet" href="src/styles/pages/2fa/2fa.css">
 	
 	<title>Enigma System - Verificación 2FA</title>
 </head>
