feat(login): Complete login happy path

--- a/two-factor-authentication-login.html
+++ b/two-factor-authentication-login.html
@@ -25,7 +25,7 @@
 			<div class="corner corner-bl"></div>
 			<div class="corner corner-br"></div>
 			
-			<h2 class="panel-title">CÓDIGO QR</h2>
+			<h2 class="panel-title">CÓDIGO QR LOGIN</h2>
 			
 			<div class="instructions">
 				<p>Escanea este código con <strong>Google Authenticator</strong> para configurar la verificación en dos pasos.</p>
