feat(login): Add footer to message

--- a/messages.html
+++ b/messages.html
@@ -34,6 +34,29 @@
       </div>
     </div>
 
+    <footer class="footer">
+      <div class="system-info">
+        <div class="info-item">
+          <span class="info-label">USUARIO:</span> <span id="username-info">--</span>
+        </div>
+
+        <div class="info-item">
+          <span class="info-label">SERVIDOR:</span> ENIGMA
+        </div>
+
+        <div class="info-item">
+          <span class="info-label">VERSIÓN:</span> 1.0.0
+        </div>
+      </div>
+
+      <div class="system-info">
+        <div class="info-item">
+          <span class="info-label">HORA DEL SISTEMA:</span>
+          <span id="system-time">--:--:--</span>
+        </div>
+      </div>
+    </footer>
+
     <!-- Modal de configuración 2FA -->
     <div class="modal-overlay" id="modalOverlay">
       <div class="modal-container">
