--- a/messages.html
+++ b/messages.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/public/galaxy.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/public/galaxy.png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700;900&display=swap"
       rel="stylesheet"
