--- a/messages.html
+++ b/messages.html
@@ -35,30 +35,31 @@
           <i class="fas fa-cog"></i>
         </div>
       </aside>
-  
-      <section style="padding: 24px; display: flex; flex-direction: column; gap: 16px;">
-        <div class="system-info">
-          <div class="info-item">
-            <span class="info-label">USUARIO:</span> <span id="username-info">--</span>
-          </div>
-  
-          <div class="info-item">
-            <span class="info-label">SERVIDOR:</span> ENIGMA
-          </div>
-  
-          <div class="info-item">
-            <span class="info-label">VERSIÓN:</span> 1.0.0
-          </div>
-        </div>
-  
-        <div class="system-info">
-          <div class="info-item">
-            <span class="info-label">HORA DEL SISTEMA:</span>
-            <span id="system-time">--:--:--</span>
-          </div>
-        </div>
-      </section>
     </main>
+
+    <!-- Footer -->
+    <footer class="footer" style="height: 50px;">
+      <div class="system-info">
+        <div class="info-item">
+          <span class="info-label">USUARIO:</span> NO AUTENTICADO
+        </div>
+
+        <div class="info-item">
+          <span class="info-label">SERVIDOR:</span> ENIGMA
+        </div>
+
+        <div class="info-item">
+          <span class="info-label">VERSIÓN:</span> 1.0.0
+        </div>
+      </div>
+
+      <div class="system-info">
+        <div class="info-item">
+          <span class="info-label">HORA DEL SISTEMA:</span>
+          <span id="system-time">--:--:--</span>
+        </div>
+      </div>
+    </footer>
 
 
     <!-- Modal de configuración 2FA -->
