feat: Implement the initial logic to show and hide the chat options modal

--- a/messages.html
+++ b/messages.html
@@ -112,7 +112,7 @@
               <i class="fas fa-ellipsis-v action-icon" id="chatOptionsBtn"></i>
 
               <!-- Mini modal para opciones del chat -->
-              <div class="chat-options-modal active" id="chatOptionsModal">
+              <div class="chat-options-modal" id="chatOptionsModal">
                 <div class="chat-options-content">
                   <div class="chat-option-item">
                     <div class="chat-option-text">Todos los participantes pueden enviar mensajes</div>
