feat(messageController): Implement the function that updates the chat permissions services (isOpenChat) using the service mock.
The handler function (from the service
[ /service/messages.js - > updateChatStateMock( chatID , isOpen ) ])

is passed as a callback to the function that changes the state
(which comes from the view [ OptionsChatModal.js ->  toggleState( handleIsOpenToggle ) ])

This is done in the message controller (messagesController)

next: implement the actual API service

This is done in the messageController.

next: implement the real API service

--- a/messages.html
+++ b/messages.html
@@ -115,9 +115,9 @@
               <div class="chat-options-modal" id="chatOptionsModal">
                 <div class="chat-options-content">
                   <div class="chat-option-item">
-                    <div class="chat-option-text">Todos los participantes pueden enviar mensajes</div>
+                    <div class="chat-option-text">Todos pueden enviar mensajes</div>
 
-                    <div class="chat-option-toggle active" id="isOpenToggle"></div>
+                    <div class="chat-option-toggle" id="isOpenToggle"></div>
                   </div>
                 </div>
               </div>
