fix(user info): Fix user info error on messages footer

--- a/messages.html
+++ b/messages.html
@@ -182,7 +182,8 @@
   <footer class="footer" style="height: 50px;">
     <div class="system-info">
       <div class="info-item">
-        <span class="info-label">USUARIO:</span> NO AUTENTICADO
+        <span class="info-label">USUARIO:</span>
+        <span id="username-info">NO AUTENTICADO</span>
       </div>
 
       <div class="info-item">
